--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>My CV</title>
 </head>
 
 <body>
+    <header>
+
+
+
+    </header>
+
+    <main>
+
+
+
+    </main>
+
+    <footer>
+
+
+
+    </footer>
 
 </body>
 
