--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
 </head>
 
 <body>
-    <header>
-
-
+    <header class="header">
+        <div class="container-nav">
+            <nav class="header-nav">
+                <img class="logo" id="Home" src="./img/Logo/Logo.svg" alt="Logo">
+                <ul>
+                    <li class="nav-bar">
+                        <a class="header-nav-text0" href="#home">Home</a>
+                    </li>
+                    <li class="nav-bar">
+                        <a class="header-nav-text1" href="!#">Portfolio</a>
+                    </li>
+                    <li class="nav-bar">
+                        <a class="header-nav-text1" href="!#">Services</a>
+                    </li>
+                    <li class="nav-bar">
+                        <a class="header-nav-text1" href="!#">Contact</a>
+                    </li>
+                </ul>
+                <a class="header-btn-talk" href="!#">Let's Talk</a>
+            </nav>
+        </div>
+        <div class="header-about">
+            <h1>HEY, I’M <p class="header-about-name">Vyacheslav Rybalko</p>, A Creative UI/UX DESIGNER.</h1>
+        </div>
 
     </header>
 
