feat: create skills bar

--- a/index.html
+++ b/index.html
@@ -30,15 +30,33 @@
                 </ul>
                 <a class="header-btn-talk" href="!#">Let's Talk</a>
             </nav>
-        </div>
+        </div> 
+        
         <div class="header-about">
-            <h1>HEY, I’M <p class="header-about-name">Vyacheslav Rybalko</p>, A Creative UI/UX DESIGNER.</h1>
+            <div class="header-about-text">
+                <h1 class="header-about-h1">HEY, I’M <b class="header-about-name">Vyacheslav Rybalko</b>, A Creative UI/UX DESIGNER.</h1>
+                <h2 class="header-about-h2">Hello, I'm <b class="header-about-name0">Vyacheslav Rybalko</b>, a UI/UX designer from Belarus.
+                I have more than one year of experience in designing websites and apps. I've got certificates from Google, and I've
+                worked on creating and improving many websites and apps on my own.</h2>
+                <a href="" class="header-btn-talk">About me.</a>
+            </div>
+            <div class="header-about-img">
+                <img src="./img/photo.png" alt="Me Photo">
+            </div>
         </div>
-
     </header>
 
     <main>
+        <div class="main-skills">
+            <ul class="skills">
+                <li class="skill">Web (front-end)</li>
+                <li class="skill">HTML, CSS</li>
+                <li class="skill">Git, GitHub</li>
+                <li class="skill">Figma / Photoshop</li>
+            </ul>
+        </div>
 
+        
 
 
     </main>
