--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
                 </ul>
                 <a class="header-btn-talk" href="!#">Let's Talk</a>
             </nav>
-        </div> 
-        
+        </div>
+
         <div class="header-about">
             <div class="header-about-text">
-                <h1 class="header-about-h1">HEY, I’M <b class="header-about-name">Vyacheslav Rybalko</b>, A Creative UI/UX DESIGNER.</h1>
-                <h2 class="header-about-h2">Hello, I'm <b class="header-about-name0">Vyacheslav Rybalko</b>, a UI/UX designer from Belarus.
-                I have more than one year of experience in designing websites and apps. I've got certificates from Google, and I've
-                worked on creating and improving many websites and apps on my own.</h2>
+                <h1 class="header-about-h1">HEY, I’M <b class="header-about-name">Vyacheslav Rybalko</b>, A Web
+                    (front-end) developer.</h1>
+                <h2 class="header-about-h2">Hello, I'm <b class="header-about-name0">Vyacheslav Rybalko</b>, a Web
+                    (front-end) developer from Belarus.
+                    I have more than one year of experience in designing websites and apps. I've got certificates from
+                    Google, and I've
+                    worked on creating and improving many websites and apps on my own.</h2>
                 <a href="" class="header-btn-talk">About me.</a>
             </div>
             <div class="header-about-img">
@@ -56,7 +59,38 @@
             </ul>
         </div>
 
-        
+        <div class="main-education">
+            <h2 class="Education-h2">Education</h2>
+
+            <div class="div-education-blocks">
+                <ul class="education-blocks">
+                    <li class="education-block">
+                        <img class="icon-school" src="./img/Logo/school.png" alt="school">
+                        <p class="education-block-name">Colledge</p>
+                        <p class="education-block-text">
+                            Branch of the Educational Institution "BTEUСС" "Mogilev Trade College" <br><br>Marketing <br><br>2015/2017
+                        </p>
+                    </li>
+                    <li class="education-block">
+                        <img class="icon-school" src="./img/Logo/school.png" alt="school">
+                        <p class="education-block-name">Universitat</p>
+                        <p class="education-block-text">
+                            Belarusian Trade and Economic University of Consumer Cooperation  <br><br>Managment S/A <br><br>2017/2020
+                        </p>
+                    </li>
+                    <li class="education-block">
+                        <img class="icon-school" src="./img/Logo/school.png" alt="school">
+                        <p class="education-block-name">Level Language</p>
+                        <p class="education-block-text">
+                            * Russian - Native speaker
+                            <br>* Belarussian - Native speaker
+                            <br>* English - A1 (Tech/Doc)
+                        </p>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
 
 
     </main>
