feat: create footer (not finally)

--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
                         <a class="header-nav-text1" href="!#">Portfolio</a>
                     </li>
                     <li class="nav-bar">
-                        <a class="header-nav-text1" href="!#">Services</a>
-                    </li>
-                    <li class="nav-bar">
                         <a class="header-nav-text1" href="!#">Contact</a>
                     </li>
                 </ul>
@@ -155,7 +152,7 @@
                 <ul class="portfolio-blocks">
                     <li class="portfolio-block">
                         <p class="portfolio-img"><img src="./img/Portfolio/portfolio-01.png" alt="My First project"></p>
-                        <p class="portfolio-text"><a href="https://abibok89.github.io/rsschool-cv/">My First project
+                        <p class="portfolio-text"><a href="https://github.com/AbiBok89/rsschool-cv/blob/rsschool-cv-html/index.html">My First project
                                 it's my portfolio</a></p>
                     </li>
                     <!-- New portfolio pages  -->
@@ -165,10 +162,32 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="footer">
+        <div class="footer-blocks">
+            <div class="footer-block-rs">
+                <a href="https://rs.school/courses/javascript-preschool-ru">
+                    <img class="rs-img" src="./img/Logo/rs.svg" alt="RS School">
+                </a>
+            </div>
+            <div class="footer-block-year">2024</div>
+            <div class="footer-block-contact">
+                <ul class="footer-contacts">
+                    <li class="footer-contact">
+                        <a href="" class="contact-Phone"><img src="./img/Logo/phone.svg" alt="Phone" class="phone-img"></a>
+                    </li>
+                    <li class="footer-contact">
+                        <a href="" class="contact-Email"><img src="./img/Logo/email.svg" alt="Email" class="email-img"></a>
+                    </li>
+                    <li class="footer-contact">
+                        <a href="" class="contact-Git"><img src="./img/Logo/github.svg" alt="GitHub" class="github-img"></a>
+                    </li>
+                    <li class="footer-contact">
+                        <a href="" class="contact-telegram"><img src="./img/Logo/telegram.svg" alt="Telegram" class="telegram-img"></a>
+                    </li>
+                </ul>
+            </div>
 
-
-
+        </div>
     </footer>
 
 </body>
