--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                         <a class="header-nav-text0" href="#home">Home</a>
                     </li>
                     <li class="nav-bar">
-                        <a class="header-nav-text1" href="!#">Portfolio</a>
+                        <a class="header-nav-text1" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-bar">
-                        <a class="header-nav-text1" href="!#">Contact</a>
+                        <a class="header-nav-text1" href="#contact">Contact</a>
                     </li>
                 </ul>
-                <a class="header-btn-talk" href="!#">Let's Talk</a>
+                <a class="header-btn-talk" href="https://t.me/AbiBok89">Let's Talk</a>
             </nav>
         </div>
 
@@ -146,7 +146,7 @@
                 </pre>
         </div>
 
-        <div class="portfolio">
+        <div    id="portfolio" class="portfolio">
             <h2 class="portfolio-h2">Portfolio</h2>
             <div class="div-portfolio-blocks">
                 <ul class="portfolio-blocks">
@@ -170,26 +170,23 @@
                 </a>
             </div>
             <div class="footer-block-year">2024</div>
-            <div class="footer-block-contact">
+            <div    id="contact" class="footer-block-contact">
                 <ul class="footer-contacts">
                     <li class="footer-contact">
-                        <a href="" class="contact-Phone"><img src="./img/Logo/phone.svg" alt="Phone" class="phone-img"></a>
+                        <a href="tel:+375295738901" class="contact-Phone"><img src="./img/Logo/phone.svg" alt="Phone" class="phone-img"></a>
                     </li>
                     <li class="footer-contact">
-                        <a href="" class="contact-Email"><img src="./img/Logo/email.svg" alt="Email" class="email-img"></a>
+                        <a href="mailto:goggler891@gmail.com" class="contact-Email"><img src="./img/Logo/email.svg" alt="Email" class="email-img"></a>
                     </li>
                     <li class="footer-contact">
-                        <a href="" class="contact-Git"><img src="./img/Logo/github.svg" alt="GitHub" class="github-img"></a>
+                        <a href="https://github.com/AbiBok89" class="contact-Git"><img src="./img/Logo/github.svg" alt="GitHub" class="github-img"></a>
                     </li>
                     <li class="footer-contact">
-                        <a href="" class="contact-telegram"><img src="./img/Logo/telegram.svg" alt="Telegram" class="telegram-img"></a>
+                        <a href="https://t.me/AbiBok89" class="contact-telegram"><img src="./img/Logo/telegram.svg" alt="Telegram" class="telegram-img"></a>
                     </li>
                 </ul>
             </div>
-
         </div>
     </footer>
-
 </body>
-
 </html>
